<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/title_content_description" />

    <com.example.finalexamapp.CustomView
        android:id="@+id/customView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/custom_view_content_description"
        android:layout_marginTop="16dp" />

    <!-- Button to Show Snackbar -->
    <Button
        android:id="@+id/buttonSnackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afficher Snackbar"
        app:layout_constraintTop_toBottomOf="@id/customView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/button_snackbar_content_description" />

    <!-- Button to Schedule Task -->
    <Button
        android:id="@+id/buttonScheduleTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Planifier une tâche"
        app:layout_constraintTop_toBottomOf="@id/buttonSnackbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:contentDescription="@string/button_schedule_task_content_description" />

    <!-- Button to Show Notification -->
    <Button
        android:id="@+id/buttonNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afficher Notification"
        app:layout_constraintTop_toBottomOf="@id/buttonScheduleTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@string/button_notification_content_description" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp" />

    <!-- Insert Data Button -->
    <Button
        android:id="@+id/buttonInsertData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Insert Data"
        android:contentDescription="Insert data into the database"
        app:layout_constraintTop_toBottomOf="@id/buttonNotification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonFetchData"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <!-- Fetch Data Button -->
    <Button
        android:id="@+id/buttonFetchData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Fetch Data"
        android:contentDescription="Fetch data from the database"
        app:layout_constraintTop_toBottomOf="@id/buttonNotification"
        app:layout_constraintStart_toEndOf="@id/buttonInsertData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>
